--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ libc = "*"
 
 [dependencies.glx]
 git = "https://github.com/servo/rust-glx.git"
+
+[dependencies.gleam]
+git = "https://github.com/servo/gleam.git"
